--- a/index.html
+++ b/index.html
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+    rel="stylesheet">
+    <script src="https://kit.fontawesome.com/cdf3455239.js" crossorigin="anonymous"></script>
 </head>
-<body>
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam id officiis libero obcaecati in ipsa accusamus consequuntur at molestiae velit.</p>
+
+<body class="open-sans-normal">
+  <header class="header secondary-bg">
+      <nav>
+        <h4 class="nav-title">Miza<span>n</span>Rbf</h4>
+        <ul class="nav-menu dark-4">
+          <li><a href="">HOME</a></li>
+          <li><a href="">ABOUT</a></li>
+          <li><a href="">PROJECTS</a></li>
+          <li><a href="">SERVICE</a></li>
+          <li><a href="">BLOG</a></li>
+          <li><a href="">CLIENT</a></li>
+          <li><a href="">CONTACT</a></li>
+        </ul>
+      </nav>
+      <div class="banner">
+        <div class="banner-content">
+          <h4 class="banner-greetings text-secondary">Hi There, I'm</h4>
+          <h1 class="banner-title text-secondary">Mizanur Rahman</h1>
+          <p class="dark-4 banner-content">A Pasionate Front-end Web-Developer. </p>
+          <div class="social-icon">
+            <a href="https://www.facebook.com/MizanRbf.Sarkar?mibextid=ZbWKwL" target="_blank"><img src="images/icons/facebook.png" alt=""></a>
+            <a href="https://www.instagram.com/mizanrbf/profilecard/?igsh=OGt2bXA0YWs0aGwz" target="_blank"><img src="images/icons/insta.png" alt=""></a>
+            <a href="https://x.com/MizanRbf?t=lhsaXMXOsrdbUVd86Ke_WA&s=09" target="_blank"><img src="images/icons/twitter.png" alt=""></a>
+            <a href="" target="_blank"></a>
+            <a href="" target="_blank"><img src="" alt=""></a>
+            <a href="" target="_blank"><img src="" alt=""></a>
+            <a href="" target="_blank"><img src="" alt=""></a>
+          </div>
+
+          <button class="btn-hello">Say Hello</button>
+          <button class="btn-secondary">Get My RESUME</button>
+        </div>
+        <img class="banner-profile-pic" src="images/1734329986582_edited_edited.png" alt="">
+      </div>
+  </header>
+  <main>
+
+  </main>
+  <footer>
+
+  </footer>
 </body>
+
 </html>
