--- a/index.html
+++ b/index.html
@@ -6,26 +6,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
     rel="stylesheet">
     <script src="https://kit.fontawesome.com/cdf3455239.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </head>
 
 <body class="open-sans-normal">
+
+  <!-- Header Section -->
   <header class="header secondary-bg">
-      <nav>
-        <h4 class="nav-title">Miza<span>n</span>Rbf</h4>
+
+    <!-- Navbar Section -->
+      <nav class="navbar">
+       <div class="nav-logo-title display-flex">
+        <img src="images/logo.png" alt="" class="nav-logo">
+        <h1 class="nav-title">Miza<span>n</span>Rbf</h1>
+       </div>
         <ul class="nav-menu dark-4">
-          <li><a href="">HOME</a></li>
-          <li><a href="">ABOUT</a></li>
-          <li><a href="">PROJECTS</a></li>
-          <li><a href="">SERVICE</a></li>
-          <li><a href="">BLOG</a></li>
-          <li><a href="">CLIENT</a></li>
-          <li><a href="">CONTACT</a></li>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Projects</a></li>
+          <li><a href="">Services</a></li>
+          <li><a href="">Client</a></li>
+          <li><a href="">Contact</a></li>
         </ul>
       </nav>
       <div class="banner">
@@ -43,7 +51,7 @@
             <a href="" target="_blank"><img src="" alt=""></a>
           </div>
 
-          <button class="btn-hello">Say Hello</button>
+          <button class="btn-secondary hello-btn">Say Hello</button>
           <button class="btn-secondary">Get My RESUME</button>
         </div>
         <img class="banner-profile-pic" src="images/1734329986582_edited_edited.png" alt="">
