--- a/index.html
+++ b/index.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-    rel="stylesheet">
-    <script src="https://kit.fontawesome.com/cdf3455239.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
-
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <!-- Fontawesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <!-- DaisyUI cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      .font-primary{
+        font-family: "Open Sans", serif;
+      }
+    </style>
+    <!-- Tailwind cdn -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: '#3bb905',
+              'port-primary': '#3bb905',
+            }
+          }
+        }
+      }
+    </script>
 </head>
 
-<body class="open-sans-normal">
+<body class="font-primary">
 
   <!-- Header Section -->
   <header class="header secondary-bg">
@@ -25,7 +45,7 @@
       <nav class="navbar">
        <div class="nav-logo-title display-flex">
         <img src="images/logo.png" alt="" class="nav-logo">
-        <h1 class="nav-title">Miza<span>n</span>Rbf</h1>
+        <h1 class="nav-title">Miza<span class="text-port-primary">n</span>Rbf</h1>
        </div>
         <ul class="nav-menu dark-4">
           <li><a href="">Home</a></li>
@@ -38,21 +58,22 @@
       </nav>
       <div class="banner">
         <div class="banner-content">
-          <h4 class="banner-greetings text-secondary">Hi There, I'm</h4>
-          <h1 class="banner-title text-secondary">Mizanur Rahman</h1>
+          <h4 class="text-port-primary">Hi There, I'm</h4>
+          <h1 class="text-port-primary text-7xl font-bold">Mizanur Rahman</h1>
           <p class="dark-4 banner-content">A Pasionate Front-end Web-Developer. </p>
+          <!-- Social Site Container -->
           <div class="social-icon">
-            <a href="https://www.facebook.com/MizanRbf.Sarkar?mibextid=ZbWKwL" target="_blank"><img src="images/icons/facebook.png" alt=""></a>
-            <a href="https://www.instagram.com/mizanrbf/profilecard/?igsh=OGt2bXA0YWs0aGwz" target="_blank"><img src="images/icons/insta.png" alt=""></a>
-            <a href="https://x.com/MizanRbf?t=lhsaXMXOsrdbUVd86Ke_WA&s=09" target="_blank"><img src="images/icons/twitter.png" alt=""></a>
+            <a href="https://www.facebook.com/MizanRbf.Sarkar?mibextid=ZbWKwL" target="_blank"></a>
+            <a href="https://www.instagram.com/mizanrbf/profilecard/?igsh=OGt2bXA0YWs0aGwz" target="_blank"></a>
+            <a href="https://x.com/MizanRbf?t=lhsaXMXOsrdbUVd86Ke_WA&s=09" target="_blank"></a>
             <a href="" target="_blank"></a>
             <a href="" target="_blank"><img src="" alt=""></a>
             <a href="" target="_blank"><img src="" alt=""></a>
             <a href="" target="_blank"><img src="" alt=""></a>
           </div>
 
-          <button class="btn-secondary hello-btn">Say Hello</button>
-          <button class="btn-secondary">Get My RESUME</button>
+          <button class="btn-secondary text-white">Say Hello</button>
+          <button class="btn-secondary text-white">Get My RESUME</button>
         </div>
         <img class="banner-profile-pic" src="images/1734329986582_edited_edited.png" alt="">
       </div>
