--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="stylesheet" href="style.css">
-    <!-- Fontawesome cdn -->
+    <!-- FontAwesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,46 +35,52 @@
     </script>
 </head>
 
-<body class="font-primary">
+<body>
 
   <!-- Header Section -->
-  <header class="header secondary-bg">
-
+  <header class="header secondary-bg px-10 md:px-32 bg-black">
     <!-- Navbar Section -->
-      <nav class="navbar">
-       <div class="nav-logo-title display-flex">
-        <img src="images/logo.png" alt="" class="nav-logo">
-        <h1 class="nav-title">Miza<span class="text-port-primary">n</span>Rbf</h1>
+      <nav class="flex flex-col md:flex-row justify-between md:items-center py-10">
+        <!-- LogoName -->
+       <div class="flex gap-2 items-center mb-6 md:mb-0">
+        <img class="w-14 h-14" src="images/logo.png" alt="" class="">
+        <h1 class="text-white text-4xl font-bold">Miza<span class="text-[#3bb905]">n</span>Rbf</h1>
        </div>
-        <ul class="nav-menu dark-4">
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Projects</a></li>
-          <li><a href="">Services</a></li>
-          <li><a href="">Client</a></li>
-          <li><a href="">Contact</a></li>
+       <!-- Nav Items -->
+        <ul class="text-gray-400 flex gap-4 text-xl flex-col md:flex-row">
+        <a class="hover:text-[#3bb905]" href="">Home</a>
+        <a class="hover:text-[#3bb905]" href="">About</a>
+        <a class="hover:text-[#3bb905]" href="">Projects</a>
+        <a class="hover:text-[#3bb905]" href="">Services</a>
+        <a class="hover:text-[#3bb905]" href="">Client</a>
+        <a class="hover:text-[#3bb905]" href="">Contact</a>
         </ul>
       </nav>
-      <div class="banner">
-        <div class="banner-content">
-          <h4 class="text-port-primary">Hi There, I'm</h4>
-          <h1 class="text-port-primary text-7xl font-bold">Mizanur Rahman</h1>
-          <p class="dark-4 banner-content">A Pasionate Front-end Web-Developer. </p>
+      <!-- Banner Section -->
+      <div class="flex flex-col md:flex-row justify-between items-center pb-14">
+        <!-- Banner Content -->
+        <div class="space-y-4 mb-10 md:mb-0">
+          <h4 class="text-[#3bb905] text-2xl font-bold">Hi There, I'm</h4>
+          <h1 class="text-7xl text-[#3bb905] font-bold">Mizanur Rahman</h1>
+          <p class="text-gray-400 text-2xl">A Pasionate Front-end Web-Developer. </p>
           <!-- Social Site Container -->
-          <div class="social-icon">
-            <a href="https://www.facebook.com/MizanRbf.Sarkar?mibextid=ZbWKwL" target="_blank"></a>
-            <a href="https://www.instagram.com/mizanrbf/profilecard/?igsh=OGt2bXA0YWs0aGwz" target="_blank"></a>
-            <a href="https://x.com/MizanRbf?t=lhsaXMXOsrdbUVd86Ke_WA&s=09" target="_blank"></a>
-            <a href="" target="_blank"></a>
-            <a href="" target="_blank"><img src="" alt=""></a>
-            <a href="" target="_blank"><img src="" alt=""></a>
-            <a href="" target="_blank"><img src="" alt=""></a>
+           <div class="flex gap-4">
+            <a href="https://github.com/MizanRbf">
+              <i class="text-[#3bb905] text-2xl fa-brands fa-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/mizanrbf"><i class="text-[#3bb905] text-2xl fa-brands fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/MizanRbf.Sarkar"><i class="text-[#3bb905] text-2xl fa-brands fa-facebook"></i></a>
+            <a href="https://x.com/MizanRbf"><i class="text-[#3bb905] text-2xl fa-brands fa-twitter"></i></a>
+           </div>
+          <div class="flex gap-4 ">
+            <button class="py-2 px-4 border border-[#3bb905] btn-secondary text-white rounded-sm">Say Hello</button>
+            <button class="py-2 px-4 border border-[#3bb905] text-white rounded-sm">Get My RESUME</button>
           </div>
-
-          <button class="btn-secondary text-white">Say Hello</button>
-          <button class="btn-secondary text-white">Get My RESUME</button>
         </div>
-        <img class="banner-profile-pic" src="images/1734329986582_edited_edited.png" alt="">
+       <!-- Banner Image -->
+        <div>
+          <img class="w-[400px]" src="images/1734329986582_edited_edited.png" alt="">
+        </div>
       </div>
   </header>
   <main>
