--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
 
   <!-- Header Section -->
-  <header class="header secondary-bg px-10 md:px-32 bg-black">
+  <header class="header secondary-bg px-4 md:px-20 lg:px-32 bg-black">
     <!-- Navbar Section -->
       <nav class="flex flex-col md:flex-row justify-between md:items-center py-10">
         <!-- LogoName -->
@@ -47,7 +47,7 @@
         <h1 class="text-white text-4xl font-bold">Miza<span class="text-[#3bb905]">n</span>Rbf</h1>
        </div>
        <!-- Nav Items -->
-        <ul class="text-gray-400 flex gap-4 text-xl flex-col md:flex-row">
+        <ul class="text-gray-400 flex gap-4 md:gap-10 text-xl flex-col md:flex-row">
         <a class="hover:text-[#3bb905]" href="">Home</a>
         <a class="hover:text-[#3bb905]" href="">About</a>
         <a class="hover:text-[#3bb905]" href="">Projects</a>
@@ -66,20 +66,20 @@
           <!-- Social Site Container -->
            <div class="flex gap-4">
             <a href="https://github.com/MizanRbf">
-              <i class="text-[#3bb905] text-2xl fa-brands fa-github"></i>
+              <i class="text-[#3bb905] hover:text-[#4dfa03] text-2xl fa-brands fa-github"></i>
             </a>
-            <a href="https://www.linkedin.com/in/mizanrbf"><i class="text-[#3bb905] text-2xl fa-brands fa-linkedin"></i></a>
-            <a href="https://www.facebook.com/MizanRbf.Sarkar"><i class="text-[#3bb905] text-2xl fa-brands fa-facebook"></i></a>
-            <a href="https://x.com/MizanRbf"><i class="text-[#3bb905] text-2xl fa-brands fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/mizanrbf"><i class="text-[#3bb905] hover:text-[#4dfa03] text-2xl fa-brands fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/MizanRbf.Sarkar"><i class="text-[#3bb905] hover:text-[#4dfa03] text-2xl fa-brands fa-facebook"></i></a>
+            <a href="https://x.com/MizanRbf"><i class="text-[#3bb905] hover:text-[#4dfa03] text-2xl fa-brands fa-twitter"></i></a>
            </div>
           <div class="flex gap-4 ">
-            <button class="py-2 px-4 border border-[#3bb905] btn-secondary text-white rounded-sm">Say Hello</button>
-            <button class="py-2 px-4 border border-[#3bb905] text-white rounded-sm">Get My RESUME</button>
+            <button class="py-2 px-4 border border-[#3bb905] btn-secondary text-white rounded-sm hover:bg-[#3bb9057e] font-semibold">Say Hello</button>
+            <button class="py-2 px-4 border border-[#3bb905] text-white rounded-sm hover:bg-[#3bb9057e] font-semibold">Get My RESUME</button>
           </div>
         </div>
        <!-- Banner Image -->
         <div>
-          <img class="w-[400px]" src="images/1734329986582_edited_edited.png" alt="">
+          <img class="w-[500px]" src="images/1734329986582_edited_edited.png" alt="">
         </div>
       </div>
   </header>
