--- a/index.html
+++ b/index.html
@@ -21,18 +21,6 @@
     </style>
     <!-- Tailwind cdn -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              clifford: '#3bb905',
-              'port-primary': '#3bb905',
-            }
-          }
-        }
-      }
-    </script>
 </head>
 
 <body>
@@ -47,7 +35,7 @@
         <h1 class="text-white text-4xl font-bold">Miza<span class="text-[#3bb905]">n</span>Rbf</h1>
        </div>
        <!-- Nav Items -->
-        <ul class="text-gray-400 flex gap-4 md:gap-10 text-xl flex-col md:flex-row">
+        <ul class="text-gray-400 flex gap-4 md:gap-10 text-xl flex-col md:flex-row font-bold">
         <a class="hover:text-[#3bb905]" href="">Home</a>
         <a class="hover:text-[#3bb905]" href="">About</a>
         <a class="hover:text-[#3bb905]" href="">Projects</a>
@@ -59,12 +47,12 @@
       <!-- Banner Section -->
       <div class="flex flex-col md:flex-row justify-between items-center pb-14">
         <!-- Banner Content -->
-        <div class="space-y-4 mb-10 md:mb-0">
-          <h4 class="text-[#3bb905] text-2xl font-bold">Hi There, I'm</h4>
-          <h1 class="text-7xl text-[#3bb905] font-bold">Mizanur Rahman</h1>
-          <p class="text-gray-400 text-2xl">A Pasionate Front-end Web-Developer. </p>
+        <div class="mb-10 md:mb-0">
+          <h4 class="text-[#3bb905] text-2xl font-bold mb-10">Hi There, I'm</h4>
+          <h1 class="text-7xl text-[#3bb905] font-bold mb-10">Mizanur Rahman</h1>
+          <p class="text-gray-400 text-2xl mb-10">A Pasionate Front-end Web-Developer. </p>
           <!-- Social Site Container -->
-           <div class="flex gap-4">
+           <div class="flex gap-4 mb-10">
             <a href="https://github.com/MizanRbf">
               <i class="text-[#3bb905] hover:text-[#4dfa03] text-2xl fa-brands fa-github"></i>
             </a>
