--- a/index.html
+++ b/index.html
@@ -71,12 +71,25 @@
         </div>
       </div>
   </header>
-  <main>
+  <main class="h-[200px]">
 
   </main>
-  <footer>
-
-  </footer>
+    <footer class="footer bg-black text-neutral-content flex justify-center flex-col items-center gap-0">
+        <div class="flex gap-4 mt-10 mb-4">
+          <a href="https://github.com/MizanRbf">
+            <i class="text-[#3bb905] hover:text-[#4dfa03] text-4xl fa-brands fa-github"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/mizanrbf"><i class="text-[#3bb905] hover:text-[#4dfa03] text-4xl fa-brands fa-linkedin"></i></a>
+          <a href="https://www.facebook.com/MizanRbf.Sarkar"><i class="text-[#3bb905] hover:text-[#4dfa03] text-4xl fa-brands fa-facebook"></i></a>
+          <a href="https://x.com/MizanRbf"><i class="text-[#3bb905] hover:text-[#4dfa03] text-4xl fa-brands fa-twitter"></i></a>
+         </div>
+         <div class="flex justify-center items-center my-4 px-[200px]">
+          <hr class="border border-white w-[400px] md:w-[700px] lg:w-[1000px]">
+        </div>
+       <div class="">
+        <p class="text-md md:text-2xl mb-10">Copyright © 2024 by <span class="font-bold">Mizanur Rahman.</span> All rights reserved</p>
+       </div>
+    </footer>
 </body>
 
 </html>
