--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         <a class="hover:text-[#3bb905]" href="">Home</a>
         <a class="hover:text-[#3bb905]" href="">About</a>
         <a class="hover:text-[#3bb905]" href="">Projects</a>
-        <a class="hover:text-[#3bb905]" href="">Services</a>
-        <a class="hover:text-[#3bb905]" href="">Client</a>
+        <a class="hover:text-[#3bb905]" href="">Blog</a>
         <a class="hover:text-[#3bb905]" href="">Contact</a>
         </ul>
       </nav>
