--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     </style>
     <!-- Tailwind cdn -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+
+    </style>
 </head>
 
 <body>
@@ -71,7 +74,22 @@
       </div>
   </header>
   <main class="h-[200px]">
+       <!-- About Section -->
+        <section>
 
+        </section>
+       <!-- Projects Section -->
+        <section>
+
+        </section>
+       <!-- Blog Section -->
+        <section>
+
+        </section>
+        <!-- Contact Section -->
+         <section>
+
+         </section>
   </main>
     <footer class="footer bg-black text-neutral-content flex justify-center flex-col items-center gap-0">
         <div class="flex gap-4 mt-10 mb-4">
@@ -83,10 +101,10 @@
           <a href="https://x.com/MizanRbf"><i class="text-[#3bb905] hover:text-[#4dfa03] text-4xl fa-brands fa-twitter"></i></a>
          </div>
          <div class="flex justify-center items-center my-4 px-[200px]">
-          <hr class="border border-white w-[400px] md:w-[700px] lg:w-[1000px]">
+          <hr class="border border-white w-[300px] md:w-[700px] lg:w-[1000px]">
         </div>
        <div class="">
-        <p class="text-md md:text-2xl mb-10">Copyright © 2024 by <span class="font-bold">Mizanur Rahman.</span> All rights reserved</p>
+        <p class="text-xs md:text-2xl mb-10">Copyright © 2024 by <span class="font-bold">Mizanur Rahman.</span> All rights reserved</p>
        </div>
     </footer>
 </body>
