--- a/index.html
+++ b/index.html
@@ -80,32 +80,26 @@
   </header>
   <main class="px-4 md:px-20 lg:px-32">
        <!-- About Section -->
-        <section id="about-section" class="mt-10 border border-[#184703] text-center text-white bg-black pt-6 rounded-md">
-          <span class="text-2xl md:text-4xl font-bold bg-[#0e2b01] px-4 py-1 rounded-md">About Me</span>
+        <section id="about-section" class="mt-10 border border-[#184703] text-white bg-black pt-4 rounded-md">
+          <span class="text-xl md:text-2xl py-1 font-bold bg-[#0e2b01] px-4 border border-[#184703] border-l-0 rounded-tr-xl rounded-br-xl">About Me</span>
           <p class="text-[#38b101] py-4 px-6 text-justify">
-            I am a passionate and driven Web Development enthusiast currently learning through Programming Hero while pursuing a degree in Arabic Language and Literature at Rajshahi University. With a strong foundation in communication, combined with technical skills in web development, I am focused on building practical and user-centric websites.
-<br>
-<br>
-Through my studies and hands-on projects, I have gained proficiency in HTML, CSS, JavaScript, and other web development technologies. I am actively applying my skills to create responsive, visually appealing websites that deliver seamless user experiences.
-<br>
-<br>
-My goal is to contribute to innovative projects that solve real-world problems, while continuing to expand my knowledge and expertise in web development. I am eager to collaborate with like-minded professionals and organizations that value creativity, problem-solving, and continuous learning.
-<br>
-<br>
-If you're looking for a motivated and detail-oriented web developer with a strong academic background and a passion for technology, I would be excited to connect and explore potential opportunities.
+Hello! I'm Mizanur Rahman, a passionate Junior Web Developer with a strong foundation in HTML, CSS, and JavaScript. Currently, I'm expanding my expertise in Java and learning full-stack development to build dynamic and user-friendly applications.
+I'm pursuing a degree in Arabic Language and Literature at the University of Rajshahi, and alongside my studies, I'm honing my skills in web development at Programming Hero. My goal is to become a full-stack developer and work in a professional tech environment.
+I enjoy creating clean and efficient code, problem-solving, and continuously learning new technologies. When I'm not coding, you might find me practicing calligraphy or exploring freelancing opportunities on platforms like Fiverr and Upwork.
+I'm always open to new projects, collaborations, and learning opportunities. Let’s connect and build something amazing together!
           </p>
         </section>
        <!-- Projects Section -->
-        <section id="projects-section" class="mt-10 border border-[#184703] text-center text-white bg-black pt-6 rounded-md pb-6">
-          <span class="text-2xl md:text-4xl font-bold bg-[#0e2b01] px-4 py-1 rounded-md">Projects</span>
+        <section id="projects-section" class="mt-10 border border-[#184703] text-white bg-black pt-4 rounded-md pb-6">
+          <span class="text-xl md:text-2xl py-1 font-bold bg-[#0e2b01] px-4 border border-[#184703] border-l-0 rounded-tr-xl rounded-br-xl">Projects</span>
         </section>
        <!-- Blog Section -->
-        <section id="blog-section" class="mt-10 border border-[#184703] text-center text-white bg-black pt-6 rounded-md pb-6">
-          <span class="text-2xl md:text-4xl font-bold bg-[#0e2b01] px-4 py-1 rounded-md">Blog</span>
+        <section id="blog-section" class="mt-10 border border-[#184703] text-white bg-black pt-4 rounded-md pb-6">
+          <span class="text-xl md:text-2xl py-1 font-bold bg-[#0e2b01] px-4 border border-[#184703] border-l-0 rounded-tr-xl rounded-br-xl">Blog</span>
         </section>
         <!-- Contact Section -->
-         <section id="contact-section" class="mt-10 border border-[#184703] text-center text-white bg-black pt-6 rounded-md pb-6">
-          <span class="text-2xl md:text-4xl font-bold bg-[#0e2b01] px-4 py-1 rounded-md">Contact Me</span>
+         <section id="contact-section" class="mt-10 border border-[#184703] text-white bg-black pt-4 rounded-md pb-6">
+          <span class="text-xl md:text-2xl py-1 font-bold bg-[#0e2b01] px-4 border border-[#184703] border-l-0 rounded-tr-xl rounded-br-xl">Contact Me</span>
          </section>
   </main>
     <footer class="mt-10 footer bg-[#0e2b01] text-neutral-content border-2 border-t-[#3bb905c5] border-x-0 border-b-0 flex justify-center flex-col items-center gap-0">
@@ -121,7 +115,7 @@ If you're looking for a motivated and detail-oriented web developer with a stron
           <hr class="border border-white w-[340px] md:w-[700px] lg:w-[1000px]">
         </div>
        <div class="">
-        <p class="text-xs md:text-2xl mb-10">Copyright © 2024 by <span class="font-bold">Mizanur Rahman.</span> All rights reserved</p>
+        <p class="text-xs md:text-2xl mb-10">Copyright © 2025 by <span class="font-bold">Mizanur Rahman.</span> All rights reserved</p>
        </div>
     </footer>
     <script src="display.js"></script>
