--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Header Section -->
   <header id="header-section" class="bg-black">
     <!-- Navbar Section -->
-      <nav class="flex justify-between items-center py-4 bg-[#0e2b01] border-2 border-b-[#3bb90565] border-x-0 border-t-0 px-4 md:px-20 lg:px-32 fixed top-0 right-0 left-0 z-50">
+      <nav class="flex justify-between items-center py-4 bg-[#0e2b01] border-2 border-b-[#3bb90565] border-x-0 border-t-0 px-4 md:px-20 lg:px-32 fixed top-0 right-0 left-0 w-screen">
         <!-- LogoName -->
        <div class="flex gap-2 items-center">
         <img class="w-10" src="images/logo.png" alt="">
