--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Header Section -->
   <header id="header-section" class="bg-black">
     <!-- Navbar Section -->
-      <nav class="flex justify-between items-center py-4 bg-[#0e2b01] border-2 border-b-[#3bb90565] border-x-0 border-t-0 px-4 md:px-20 lg:px-32 fixed top-0 right-0 left-0 w-screen">
+      <nav class="flex justify-between items-center py-4 bg-[#0e2b01] border-2 border-b-[#3bb90565] border-x-0 border-t-0 px-6 md:px-20 lg:px-32 fixed top-0 right-0 left-0 w-screen">
         <!-- LogoName -->
        <div class="flex gap-2 items-center">
         <img class="w-10" src="images/logo.png" alt="">
@@ -42,12 +42,12 @@
             <button class="text-[#46dd05] w-full text-2xl cursor-pointer hover:text-[#69ff29]">
               <i class="fa-solid fa-bars "></i>
             </button>
-            <ul id="mobile-menu" class="dropdown-content z-[1] menu p-2 shadow bg-[#0e2b01] border-2 border-[#3bb90565] rounded-sm text-lg font-bold text-white space-y-2">
-        <a class="hover:text-[#3bb905]" href="">Home</a>
-        <a class="hover:text-[#3bb905]" href="">About</a>
-        <a class="hover:text-[#3bb905]" href="">Projects</a>
-        <a class="hover:text-[#3bb905]" href="">Blog</a>
-        <a class="hover:text-[#3bb905]" href="">Contact</a>
+            <ul id="mobile-menu" class="dropdown-content menu px-0 shadow bg-[#0e2b01] border-2 border-[#3bb90565] rounded-sm text-lg font-bold text-white py-0">
+        <a class="text-white hover:bg-[#3bb9057e] px-6 py-2" href="">Home</a>
+        <a class="text-white hover:bg-[#3bb9057e] px-6 py-2" href="">About</a>
+        <a class="text-white hover:bg-[#3bb9057e] px-6 py-2" href="">Projects</a>
+        <a class="text-white hover:bg-[#3bb9057e] px-6 py-2" href="">Blog</a>
+        <a class="text-white hover:bg-[#3bb9057e] px-6 py-2" href="">Contact</a>
             </ul>
           </div>
       </nav>
